2002-11-19  Gregory John Casamento <greg_casamento@yahoo.com>

	* ClassInformation.plist: Added entry for NSOpenGLView.

2002-11-19  Pierre-Yves Rivaille <pyrivail@ens-lyon.fr>

	* GormObjectEditor.m ([GormObjectEditor +setEditor:forDocument:]): 
	replaced self with editor. There was an exception when instancing
	any class.

2002-11-19  Gregory John Casamento  <greg_casamento@yahoo.com>

	* Gorm.m: Added key equivalents for operations in the Classes
	menu.
	
2002-11-18  Pierre-Yves Rivaille  <pyrivail@ens-lyon.fr>
 
	* GNUMakefile: added GormViewSizeInspector.m, GormGenericEditor.m
	and GormImageEditor.m.
	* GormGenericEditor.m: new abstract superclass of GormObjectEditor, 
	GormImageEditor and GormSoundEditor.
	* GormImageEditor.m: new class to deal with Images.
	* GormSoundEditor.m: refactored code with GormGenericEditor,
	now looks like GormImageEditor.m
	* GomCustomClassInspector.m: rewrote parts to stop using notification
	and use changeObject: method instead.
	* Gorm.m, Gorm.h, GormPrivate.h, GormDocument.h, GormDocument.m:
	changes to accomodate new Image & Sound code.
	* GormViewSizeInspector.m: new file. Contains code moved from 
	GormObjectEditor.m.

2002-11-18  Gregory John Casamento <greg_casamento@yahoo.com>

	* Gorm.m ([Gorm -testInterface:]): Move "isTesting = YES" before the
	calls to [GormDocument -beginArchiving] and 
	[GormDocument -endArchiving]
	so that we can testing the state in those methods.
	* GormClassManager.h: set return type of 
	[GormClassManager -customClassMap]
	to NSMutableDictionary and set parameter of 
	[GormClassManager -setCustomClassMap:] to NSMutableDictionary.
	* GormClassManager.m: [GormClassManager -setCustomClassMap:]
	now simply assigns the class map instead of copying it.
	* GormCustomClassInspector.m: Copy the name of the class from 
	the cell using [NSString stringWithString:] instead of using 
	the value directly which might cause memory issues.  Also changed 