@@ -90,7 +90,6 @@ selectCellWithString: (NSString*)title
   RELEASE(sets);
   RELEASE(types);
   RELEASE(okButton);
-  // RELEASE(window);
   [super dealloc];
 }
 
